# how

./: Cargo.toml  README.md
src/: data.rs  lib.rs  main.rs  text.rs
testdata/: test.md
