[package]
name = "how"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.2", features = ["derive"] }
syntect = {version = "5.0"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
markdown = "1.0.0-alpha.9"
anyhow = "1.0.70"
colored = "2"
home = "0.5.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
