[package]
name = "how"
version = "0.1.1"
edition = "2021"
description = "命令用于查询 linux 命令行如何使用"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.2", features = ["derive"] }
syntect = {version = "5.0"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
markdown = "1.0.0-alpha.9"
anyhow = "1.0.70"
colored = "2"
home = "0.5.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
